--- a/views/readMoreSlides/componentsRaspi.pug
+++ b/views/readMoreSlides/componentsRaspi.pug
@@ -6,8 +6,7 @@ div.row.featurette
   div.col-md-9
     h2.featurette-heading 
       | Blinky-Lite Device Message Adapters - 
-      a(href='https://www.raspberrypi.org/') Raspberry Pi
-      span.featurette-heading  3 and Zero
+      a(href='https://www.raspberrypi.org/') Raspberry Pi 3 and Zero
     h5.card-major-bullet
       | A Raspberry Pi is a credit card-sized computer originally designed for education, inspired by the 1981 BBC Micro. 
     ul
