--- a/views/examples.pug
+++ b/views/examples.pug
@@ -1,7 +1,7 @@
 extends layout
 block content
   .jumbotron
-    h1.display-5.text-warning Blink-Lite Example Projects
+    h1.display-5.jumbotron-title Blinky-Lite Example Projects
   div.container.marketing
     include examples/applicationsKlystron.pug
     include examples/applicationsPower.pug
