--- a/views/tutorial.pug
+++ b/views/tutorial.pug
@@ -1,39 +1,37 @@
 extends layout
 block content
   .jumbotron
-    h1.text-warning Blinky-Lite Tutorial
-    h2 In this tutorial we will show you how to make a light blink with the full Blinky-Lite stack
+    h1.jumbotron-title Blinky-Lite Tutorial
+    h2.jumbotron-title In this tutorial we will show you how to make a light blink with the full Blinky-Lite stack!
     p.lead Althought the goal of the tutorial might sound trivial, once you can make a simple LED blink with 
       | with the Blinky-Lite stack, you should be able to extend this knowledge to make anything "blink" - 
       | from an LED to a nuclear power plant
-  .row(align='center')
-    .col-md-6
-      .card
-        p
-        img(src='img/tutorial/RPi-Logo.png', height='200px')
-        h5.card-title Setting Up a Raspberry-Pi for Blinky-Lite
-        .card-body
-          p.card-text
-            | The Raspberry Pi computer integral component of the Blinky-Lite. 
-            | It can be used a device message controller, an MQTT broker, and a Node-RED web application
-            | This section will show you how to setup a Raspberry Pi so it can function seamlessly in Blinky-Lite
-          a.btn.card-button(href='/tutorial/setupRPi') Read More
-    .col-md-6
-      .card
-        p
-        img(src='img/tutorial/blinky-breadboard.png', height='200px')
-        h5.card-title Constructing a Blinky-Lite Circuit
-        .card-body
-          p.card-text
-            | This section will show the circuit diagram and parts list needed to build an example Blinky-Lite circuit
-          a.btn.card-button(href='/tutorial/blinkyCircuit') Read More
-    .col-md-6
-      .card
-        p
-        img(src='img/tutorial/dmaRedFlowCrop.png', height='200px')
-        h5.card-title Building a Device Message Adapter (DMA)
-        .card-body
-          p.card-text
-            | This section will show you how to build a Device Message Adapter (DMA) in Node-Red on a Raspberry-Pi.
-            | The DMA is the interface between the MQTT broker and the device you want to control.
-          a.btn.card-button(href='/tutorial/dma') Read More
+  .container
+    .row
+      .col-md
+        .card
+          img(src='img/tutorial/RPi-Logo.png', height='180px')
+          p.card-title Setting Up a Raspberry-Pi for Blinky-Lite
+          .card-body
+            p.card-text
+              | The Raspberry Pi computer integral component of the Blinky-Lite. 
+              | It can be used a device message controller, an MQTT broker, and a Node-RED web application
+              | This section will show you how to setup a Raspberry Pi so it can function seamlessly in Blinky-Lite
+            a.btn.card-button(href='/tutorial/setupRPi') Read More
+      .col-md
+        .card
+          img(src='img/tutorial/blinky-breadboard.png', height='180px')
+          p.card-title Constructing a Blinky-Lite Circuit
+          .card-body
+            p.card-text
+              | This section will show the circuit diagram and parts list needed to build an example Blinky-Lite circuit
+            a.btn.card-button(href='/tutorial/blinkyCircuit') Read More
+      .col-md
+        .card
+          img(src='img/tutorial/dmaRedFlowCrop.png', height='180px')
+          p.card-title Building a Device Message Adapter (DMA)
+          .card-body
+            p.card-text
+              | This section will show you how to build a Device Message Adapter (DMA) in Node-Red on a Raspberry-Pi.
+              | The DMA is the interface between the MQTT broker and the device you want to control.
+            a.btn.card-button(href='/tutorial/dma') Read More
