--- a/views/setupRPi.pug
+++ b/views/setupRPi.pug
@@ -21,7 +21,7 @@ block content
           a(href='#mqtt') Installing an MQTT Broker
   .container
     .row
-      .col-md(style='padding-bottom: 20px;')
+      .col-md
         .card
           h2.card-title 
             a(NAME='diskImage') Setting up the Disk Image 
@@ -103,7 +103,7 @@ block content
               br
               | and save 
               i (cntrl-x).
-      .col-md(style='padding-bottom: 20px;')
+      .col-md
         .card
           h2.card-title 
             a(NAME='connecting') Connecting to the Raspberry-Pi 
@@ -185,7 +185,7 @@ block content
             p.card-text
               | Open the GUI raspi-config program and under the Localisation tab, set the Locale, Timezone, and Keyboard. 
               | The RaspberryPi will have to be booted for these changes to take effect.
-      .col-md(style='padding-bottom: 20px;')
+      .col-md
         .card
           h2.card-title 
             a(NAME='node') Setting up node.js and npm 
@@ -271,7 +271,7 @@ block content
               br
               code rm -rf ~/Downloads/*
               br
-      .col-md(style='padding-bottom: 20px;')
+      .col-md
         .card
           h2.card-title 
             a(NAME='arduino') Installing a Arduino Programing Environment
@@ -298,7 +298,7 @@ block content
               li Upload the sketch to the Arduino and see that it behaves properly.
             p.card-text You can learn more about programming the Arduino at: 
               a(href='https://www.arduino.cc/en/Guide/HomePage', target='_blank') https://www.arduino.cc/en/Guide/HomePage
-      .col-md(style='padding-bottom: 20px;')
+      .col-md
         .card
           h2.card-title 
             a(NAME='mqtt') Installing an MQTT Broker
