--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,6 +18,9 @@ code {
   overflow-y: hidden;
   white-space: nowrap;
 }
+.col-md {
+  padding-bottom: 20px;
+}
 .jumbotron {
   background-color:#557a95 !important;
   color:#ffffff
