--- a/views/menubar.pug
+++ b/views/menubar.pug
@@ -7,11 +7,10 @@ nav.navbar.navbar-expand-lg.navbar-light
   #navbarNavDropdown.navbar-expand
     ul.navbar-nav
       li.nav-item.active
-        a.nav-link(href='/')
-          | Home 
+        a.nav-link.fas.fa-home.fa-2x(href='/')
           span.sr-only (current)
       li.nav-item
-        a.nav-link(href='/readmore') Read More
+        a.nav-link.fas.fa-glasses.fa-2x(href='/readmore')
       li.nav-item
         a.nav-link(href='/examples') Examples
       li.nav-item.dropdown
@@ -23,6 +22,8 @@ nav.navbar.navbar-expand-lg.navbar-light
           a.dropdown-item(href='/tutorial/blinkyCircuit') Constructing a Blinky-Lite Circuit
           a.dropdown-item(href='/tutorial/dma') Building a Device Message Adapter (DMA)
       li.nav-item
-        a.nav-link(href='https://github.com/Blinky-Lite', target='_blank') GitHub
+        a.nav-link.fab.fa-github.fa-2x(href='https://github.com/Blinky-Lite', target='_blank')
       li.nav-item
-        a.nav-link(href='/contact') Contact
+        a.nav-link.fab.fa-twitter.fa-2x(href='https://twitter.com/BlinkyLite', target='_blank')
+      li.nav-item
+        a.nav-link.fas.fa-envelope.fa-2x(href='/contact')
