--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,6 +7,7 @@ html(lang='en')
     link(rel="icon", href="/img/favicon.ico?v=3", type="image/x-icon") 
     title= title
     link(rel="stylesheet",href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css",integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB", crossorigin="anonymous")
+    link(rel="stylesheet",href="https://use.fontawesome.com/releases/v5.2.0/css/all.css",integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ", crossorigin="anonymous")
     block css
       link(rel='stylesheet', href='/css/style.css')
     block js
@@ -14,7 +15,20 @@ html(lang='en')
     include menubar
     block content
     div.footer
-      p Last updated 2018-Aug-07
+      .row 
+        .col-md
+          span 
+            br
+            | Last updated 2018-Aug-07
+      .row 
+        .col
+          a.fas.fa-home.fa-2x(href='/')
+        .col
+          a.fab.fa-github.fa-2x(href='https://github.com/Blinky-Lite', target='_blank')
+        .col
+          a.fab.fa-twitter.fa-2x(href='https://twitter.com/BlinkyLite', target='_blank')
+        .col
+          a.fas.fa-envelope.fa-2x(href='/contact')
     script(src="https://code.jquery.com/jquery-3.3.1.slim.min.js", integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo", crossorigin="anonymous")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js", integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49", crossorigin="anonymous")
     script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js", integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T", crossorigin="anonymous")
