--- a/views/examples/applicationsPower.pug
+++ b/views/examples/applicationsPower.pug
@@ -1,7 +1,7 @@
 div.row.featurette
   div.col-md-12
-    h2.featurette-heading 
-      | Power Meter
+    h2.featurette-heading.featurette-heading1 
+      | Wireless Power Monitor
 div.row.featurette
   div.col-md-6
     img(src='/img/examples/powerCircuit.jpg',width='100%') 
