--- a/views/examples/applicationsScale.pug
+++ b/views/examples/applicationsScale.pug
@@ -1,6 +1,6 @@
 div.row.featurette
   div.col-md-12
-    h2.featurette-heading 
+    h2.featurette-heading.featurette-heading1 
       | Wireless Scale
 div.row.featurette
   div.col-md-5
