--- a/views/index.pug
+++ b/views/index.pug
@@ -1,8 +1,8 @@
 extends layout
 block content
-  .jumbotron
-    h1.display-5.jumbotron-title BLINKY-LITE
-    h2.display-5.jumbotron-title Instrumentation for humans
+  .jumbotron.jumbotron1
+    h1.display-5.jumbotron-title.jumbotron-title1 BLINKY-LITE
+    h2.display-5.jumbotron-title.jumbotron-title1 Instrumentation for humans
     p.lead.
       Digital control is at the heart of all modern R&amp;D activities, 
       yet it remains opaque and excessively complex to all but the most 
@@ -15,7 +15,7 @@ block content
   div.container.marketing
     div.row.featurette
       div.col-md-7
-        h2.featurette-heading Unlocking digital controls
+        h2.featurette-heading.featurette-heading1 Unlocking digital controls
         p.lead.
           While standard systems for digital control have gravitated towards 
           levels of complexity that require more and more specialised expertise, 
@@ -28,7 +28,7 @@ block content
     hr.featurette-divider
     div.row.featurette
       div.col-md-7.order-md-2
-        h2.featurette-heading Standing on the shoulders of giants
+        h2.featurette-heading.featurette-heading1 Standing on the shoulders of giants
         p.lead.
           Business models that depend on constant vendor interaction lead to systems 
           of poor quality. Blinky-Lite is 100% open source. The code is yours 
@@ -39,7 +39,7 @@ block content
     hr.featurette-divider
     div.row.featurette
       div.col-md-7
-        h2.featurette-heading Real-time controls without overwhelming the system
+        h2.featurette-heading.featurette-heading1 Real-time controls without overwhelming the system
         p.lead.
           With mobile control an expectation of modern systems, real-time connections 
           are vital to maintaining the quality of the data for all users. While 
