--- a/views/readMoreSlides/architecture.pug
+++ b/views/readMoreSlides/architecture.pug
@@ -1,29 +1,29 @@
 div.row.featurette
   div.col-md-3
     a(data-toggle="modal", data-target="#exampleModal")
-      img(src='/img/readmore/BlinkyLiteArchitecture.png',width='100%') 
+      img(src='/img/readmore/BlinkyLiteArchitecture.png',width='100%', style='background-color: #ffffff;') 
   div.col-md-9
-    h2.featurette-heading Blinky-Lite Architecture
+    h2.featurette-heading.featurette-heading1 Blinky-Lite Architecture
     ul
       li
-        h5.card-major-bullet
+        h5.card1-major-bullet
           | MQTT 
-          span.card-minor-minor-bullet
+          span.card1-minor-minor-bullet
             | as the asynchronous communication protocol
       li
-        h5.card-major-bullet
+        h5.card1-major-bullet
           | Node-RED (node.js based)  
-          span.card-minor-minor-bullet
+          span.card1-minor-minor-bullet
             | as the graphical programing language
       li
-        h5.card-major-bullet
+        h5.card1-major-bullet
           | Inexpensive wireless linux computers (Raspberry Pi) 
-          span.card-minor-minor-bullet
+          span.card1-minor-minor-bullet
             | as message adapters and web servers
       li
-        h5.card-major-bullet
+        h5.card1-major-bullet
           | Inexpensive and versatile USB based microcontrollers (Arduino, Teensy, etc..) 
-          span.card-minor-minor-bullet
+          span.card1-minor-minor-bullet
             | as device controllers
 
 // Modal
