--- a/views/readMoreSlides/componentsMicro.pug
+++ b/views/readMoreSlides/componentsMicro.pug
@@ -22,21 +22,21 @@ div.row.featurette
         a(href='https://www.pjrc.com/store/teensy32.html', target='_blank') Teensy 3.2
         img(src='/img/readmore/teensy32.jpg',width='100%') 
   div.col-md-9
-    h2.featurette-heading Blinky-Lite Device Controllers - USB based microcontrollers
-    h5.card-major-bullet
+    h2.featurette-heading.featurette-heading1 Blinky-Lite Device Controllers - USB based microcontrollers
+    h5.card1-major-bullet
       | USB based microcontrollers consists of both 
     ul
-      li.card-minor-bullet
+      li.card1-minor-bullet
         | a physical programmable circuit board (often referred to as a microcontroller) 
-      li.card-minor-bullet
+      li.card1-minor-bullet
         | and a piece of software, or IDE (Integrated Development Environment) that runs on a computer, used to write and upload computer code to the physical board.
-    h5.card-major-bullet
+    h5.card1-major-bullet
       | The platform has become quite popular with people just starting out with electronics
     ul
-      li.card-minor-bullet
+      li.card1-minor-bullet
         | Unlike most previous programmable circuit boards, the platform does not need a separate piece of hardware (called a programmer) in order to load new code onto the board – it us simply uploaded with an USB cable. 
-      li.card-minor-bullet
+      li.card1-minor-bullet
         | Additionally, most of these platforms us the Arduino IDE which is a simplified version of C++, making it easier to learn to program. 
-      li.card-minor-bullet
+      li.card1-minor-bullet
         | Finally, most of these platforms provide a standard form factor that breaks out the functions of the micro-controller into a more accessible package.
 hr.featurette-divider
