--- a/views/readMoreSlides/theSolution.pug
+++ b/views/readMoreSlides/theSolution.pug
@@ -2,39 +2,39 @@ div.row.featurette
   div.col-md-3
     img(src='/img/BlinkyLogo.png',width='100%') 
   div.col-md-9
-    h2.featurette-heading The Solution: Blinky-Lite - an IoT Control System
-    h5.card-major-bullet
+    h2.featurette-heading.featurette-heading1 The Solution: Blinky-Lite - an IoT Control System
+    h5.card1-major-bullet
       | Blinky-Lite is an easily customizable control platform 
     ul
-      li.card-minor-bullet
+      li.card1-minor-bullet
         | specifically targeted at the rapidly changing needs of small, high-tech startups
-      li.card-minor-bullet
+      li.card1-minor-bullet
         | Based on IoT (Internet of Things) technology 
-    h5.card-major-bullet
+    h5.card1-major-bullet
       | Blinky-Lite is:
     ul
-      li.card-minor-bullet
+      li.card1-minor-bullet
         | Reliable - 
-        span.card-minor-minor-bullet
+        span.card1-minor-minor-bullet
           | small form factor computers placed close to control points
-      li.card-minor-bullet
+      li.card1-minor-bullet
         | Non-invasive - 
-        span.card-minor-minor-bullet
+        span.card1-minor-minor-bullet
           | wireless technology
-      li.card-minor-bullet
+      li.card1-minor-bullet
         | Low cost - 
-        span.card-minor-minor-bullet
+        span.card1-minor-minor-bullet
           | based on the IoT revolution
-      li.card-minor-bullet
+      li.card1-minor-bullet
         | Easily modifiable -  
-        span.card-minor-minor-bullet
+        span.card1-minor-minor-bullet
           | Node-Red graphical code environment
-      li.card-minor-bullet
+      li.card1-minor-bullet
         | Mobile - 
-        span.card-minor-minor-bullet
+        span.card1-minor-minor-bullet
           | User interface is web based
-      li.card-minor-bullet
+      li.card1-minor-bullet
         | Open source for long term growth
-      li.card-minor-bullet
+      li.card1-minor-bullet
         | Secure
 hr.featurette-divider
