--- a/views/contact.pug
+++ b/views/contact.pug
@@ -4,7 +4,7 @@ block content
     .col-md-5
       .form-area
         form(role='form', method='POST', action='/contact')
-          h3.card-title.index-page-card-title(style='margin-bottom: 25px; text-align: center;') Contact Form
+          h3.card-title.card1-title.index-page.card-title.card1-title(style='margin-bottom: 25px; text-align: center;') Contact Form
           .form-group
             input#name.form-control(type='text', name='name', placeholder='Name', required='')
           .form-group
@@ -15,8 +15,8 @@ block content
             input#subject.form-control(type='text', name='subject', placeholder='Subject', required='')
           .form-group
             textarea#message.form-control(type='textarea', rows='7', maxlength="141", name='message', placeholder='Message', required='')
-          //button.btn.pull-right.index-page-card-button(type='submit', name='submit') Submit Form
-          button.btn.pull-right.index-page-card-button(type='submit', onclick='myFunction()') Submit Form
+          //button.btn.pull-right.index-page.card-button.card1-button(type='submit', name='submit') Submit Form
+          button.btn.pull-right.index-page.card-button.card1-button(type='submit', onclick='myFunction()') Submit Form
   script.
     function myFunction() {
     alert("Your request has been sent to Top Men");
