--- a/views/examples/applicationsBakeout.pug
+++ b/views/examples/applicationsBakeout.pug
@@ -1,6 +1,6 @@
 div.row.featurette
   div.col-md-12
-    h2.featurette-heading 
+    h2.featurette-heading.featurette-heading1 
       | Vacuum Bakeout System
 div.row.featurette
   div.col-md-4
