--- a/views/examples/applicationsInterlock.pug
+++ b/views/examples/applicationsInterlock.pug
@@ -1,6 +1,6 @@
 div.row.featurette
   div.col-md-12
-    h2.featurette-heading 
+    h2.featurette-heading.featurette-heading1 
       | Fast Interlock
 div.row.featurette
   div.col-md-3
