--- a/views/examples/applicationsKlystron.pug
+++ b/views/examples/applicationsKlystron.pug
@@ -1,7 +1,7 @@
 div.row.featurette
   div.col-md-12
-    h2.featurette-heading 
-      | Klystron Test Stand
+    h2.featurette-heading.featurette-heading1 
+      | High Power Test Lab
 div.row.featurette
   div.col-md-4
     img(src='/img/examples/LTH.png',width='100%') 
