--- a/views/readmore.pug
+++ b/views/readmore.pug
@@ -1,8 +1,8 @@
 extends layout
 block content
-  .jumbotron
-    h1.display-5.jumbotron-title BLINKY-LITE
-    h2.display-5.jumbotron-title Instrumentation for humans
+  .jumbotron.jumbotron1
+    h1.display-5.jumbotron-title.jumbotron-title1 BLINKY-LITE
+    h2.display-5.jumbotron-title.jumbotron-title1 Instrumentation for humans
     p.lead.
       Digital control is at the heart of all modern R&amp;D activities, 
       yet it remains opaque and excessively complex to all but the most 
