added investigating dma flow

--- a/views/menubar.pug
+++ b/views/menubar.pug
@@ -16,7 +16,7 @@ nav.navbar.navbar-expand-lg.navbar-light
       li.nav-item.dropdown
         a#navbarDropdownMenuLink.nav-link.dropdown-toggle(href='#' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false')
           | Tutorial
-        .dropdown-menu(aria-labelledby='navbarDropdownMenuLink')
+        .dropdown-menu(aria-labelledby='navbarDropdownMenuLink',style='background-color: #557a95;')
           a.dropdown-item(href='/tutorial') Overview
           a.dropdown-item(href='/tutorial/setupRPi') Setting Up a Raspberry-Pi for Blinky-Lite
           a.dropdown-item(href='/tutorial/blinkyCircuit') Constructing a Blinky-Lite Circuit
