Finished the UI

--- a/views/blinkyCircuit.pug
+++ b/views/blinkyCircuit.pug
@@ -1,7 +1,7 @@
 extends layout
 block content
   .jumbotron.jumbotron1
-    h1.text-warning Constructing a Blinky-Lite Circuit
+    h1.jumbotron-title.jumbotron-title1 Constructing a Blinky-Lite Circuit
     p This section will show the circuit diagram and parts list needed to build an example Blinky-Lite circuit.
     h2 
       a(NAME='contents') Table of Contents
