--- a/views/menubar.pug
+++ b/views/menubar.pug
@@ -21,6 +21,7 @@ nav.navbar.navbar-expand-lg.navbar-light
           a.dropdown-item(href='/tutorial/setupRPi') Setting Up a Raspberry-Pi for Blinky-Lite
           a.dropdown-item(href='/tutorial/blinkyCircuit') Constructing a Blinky-Lite Circuit
           a.dropdown-item(href='/tutorial/dma') Building a Device Message Adapter (DMA)
+          a.dropdown-item(href='/tutorial/gui') Building a User Interface
       li.nav-item
         a.nav-link.fab.fa-github.fa-2x(href='https://github.com/Blinky-Lite', target='_blank')
       li.nav-item
