changed front page to MQTT image

--- a/views/index.pug
+++ b/views/index.pug
@@ -46,4 +46,4 @@ block content
           such communications could overburden traditional control systems, the Blinky-Lite 
           architecture is immune from this.
       div.col-md-5
-        img.featurette-image.img-fluid.mx-auto(src="img/PowerMeterHerokuDashboard.png", alt="Generic placeholder image")
+        img.featurette-image.img-fluid.mx-auto(src="img/readmore/mqtt.png", alt="Generic placeholder image")
