--- a/views/examples.pug
+++ b/views/examples.pug
@@ -3,6 +3,7 @@ block content
   .jumbotron.jumbotron1
     h1.display-5.jumbotron-title.jumbotron-title1 Blinky-Lite Example Projects
   div.container.marketing
+    include examples/applicationsMode0.pug
     include examples/applicationsKlystron.pug
     include examples/applicationsPower.pug
     include examples/applicationsBakeout.pug
