--- a/views/menubar.pug
+++ b/views/menubar.pug
@@ -26,4 +26,5 @@ nav.navbar.navbar-expand-lg.navbar-light
       li.nav-item
         a.nav-link.fab.fa-twitter.fa-2x(href='https://twitter.com/BlinkyLite', target='_blank',data-toggle="tooltip",data-placement="bottom",title="Twitter")
       li.nav-item
-        a.nav-link.fas.fa-envelope.fa-2x(href='/contact',data-toggle="tooltip",data-placement="bottom",title="Contact")
+        a.nav-link.fas.fa-envelope.fa-2x(href='mailto:info@blinky-lite.io',data-toggle="tooltip",data-placement="bottom",title="Contact")
+        //a.nav-link.fas.fa-envelope.fa-2x(href='/contact',data-toggle="tooltip",data-placement="bottom",title="Contact")
