added demo link

--- a/views/menubar.pug
+++ b/views/menubar.pug
@@ -27,4 +27,6 @@ nav.navbar.navbar-expand-lg.navbar-light
         a.nav-link.fab.fa-twitter.fa-2x(href='https://twitter.com/BlinkyLite', target='_blank',data-toggle="tooltip",data-placement="bottom",title="Twitter")
       li.nav-item
         a.nav-link.fas.fa-envelope.fa-2x(href='mailto:info@blinky-lite.io',data-toggle="tooltip",data-placement="bottom",title="Contact")
+      li.nav-item
+        a.nav-link.fas.fa-video.fa-2x(href='https://blinky-lite-demo.herokuapp.com/ui/#/0',target='_blank',data-toggle="tooltip",data-placement="bottom",title="Demo")
         //a.nav-link.fas.fa-envelope.fa-2x(href='/contact',data-toggle="tooltip",data-placement="bottom",title="Contact")
