added link to slide show

--- a/views/menubar.pug
+++ b/views/menubar.pug
@@ -28,5 +28,7 @@ nav.navbar.navbar-expand-lg.navbar-light
       li.nav-item
         a.nav-link.fas.fa-envelope.fa-2x(href='mailto:info@blinky-lite.io',data-toggle="tooltip",data-placement="bottom",title="Contact")
       li.nav-item
+        a.nav-link.fas.fa-video.fa-2x(href='https://blinky-lite-demo.herokuapp.com/ui/#/0',target='_blank',data-toggle="tooltip",data-placement="bottom",title="Demo")
+      li.nav-item
         a.nav-link.fab.fa-youtube.fa-2x(href='https://docs.google.com/presentation/d/e/2PACX-1vTRtcu31Cg1fK75MeyRtGBx8KBNNQowXRt-tzldjs7ZeobDEjiWsmu6qINzxa1tOmYHQQqikTcp8x4a/pub?start=true&loop=true&delayms=3000',target='_blank',data-toggle="tooltip",data-placement="bottom",title="SlideShow")
         //a.nav-link.fas.fa-envelope.fa-2x(href='/contact',data-toggle="tooltip",data-placement="bottom",title="Contact")
