added slide show

--- a/views/examples/applicationsMode0.pug
+++ b/views/examples/applicationsMode0.pug
@@ -3,10 +3,13 @@ div.row.featurette
     h2.featurette-heading.featurette-heading1 
       | Particle Accelerator Beam Stablization System
 div.row.featurette
-  div.col-md-4
-    img(src='/img/examples/mode0Damper.jpg',width='100%') 
+  div.col-md-5
+    img(src='/img/examples/OscillationOverthruster.jpg',width='100%') 
   div.col-md-4
     img(src='/img/examples/Mode0Code.png',width='100%') 
-  div.col-md-4
-    img(src='/img/examples/Mode0Gui.png',width='100%') 
+  div.col-md-3
+    img(src='/img/examples/DiffractionMode0Off.png',width='100%') 
+    p System Off
+    img(src='/img/examples/DiffractionMode0On.png',width='100%') 
+    p System On
 hr.featurette-divider
