--- a/views/readmore.pug
+++ b/views/readmore.pug
@@ -11,7 +11,11 @@ block content
       Blinky-Lite takes it out of the hands of the experts andf gives controls back to you.
     p.lead.
       Blinky-Lite is an open source platform based on open source technology. It is not for sale. It is free.
-    a.btn.jumbotron-button(href='/examples') Examples
+    .row
+      .col-md-1
+        a.btn.jumbotron-button(href='/slideShow') Slide Show
+      .col-md-1 
+        a.btn.jumbotron-button(href='/examples') Examples
   div.container.marketing
     include readMoreSlides/theProblem.pug
     include readMoreSlides/theSolution.pug
